risc0/zirgen/dsl/test/repro/specialize_and_call_bogus_type.zir
// RUN: not zirgen %s 2>&1 >/dev/null | FileCheck %s
// CHECK: error: unknown component `ExampleGenericWal`

component SpecializeWithWrongType() {
  ExampleGenericWal<Val>()
}

